--- a/php7/Dockerfile
+++ b/php7/Dockerfile
@@ -19,4 +19,5 @@ RUN docker-php-source extract \
     && docker-php-ext-install redis \
     && docker-php-source delete
 
-
+RUN wget https://getcomposer.org/composer.phar -O /usr/local/bin/composer \
+    && chmod +x /usr/bin/composer
